# cad-capital-gains

./: .gitignore  CONTRIBUTING.md  CONVERTERS.md  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  release.yml
acb_pdf/: .gitignore
capgains/: cli.py  exchange_rate.py  input_actions.py  schwab_statement_importer.py  statements_importer.py  ticker_gains.py  transaction.py  transactions.py  transactions_reader.py
capgains/commands/: capgains_convert.py  capgains_maxcost.py
capgains/converters/: __init__.py  cra_t5008_pdf.py  schwab_eac.py  td_statements_pdf.py  td_t5008_pdf.py  td_trade_confirm_pdf.py
scripts/: capgains  envsetup.sh
tests/: test_capgains_maxcost.py  test_comprehensive_basic.py  test_comprehensive_edge_cases.py  test_comprehensive_superficial.py  test_merge_transactions.py  test_norberts_gambit.py  test_sample.py  test_schwab_statement_importer.py  test_statements_importer.py  test_ticker_gains.py  test_transactions_reader.py  test_transactions_reader_errors.py
tests/converters/: test_cra_t5008_converter.py  test_schwab_eac_converter.py  test_td_converter_unit.py  test_td_statements_pdf.py  test_td_t5008_converter.py  test_td_trade_confirm_converter.py
tests/sample_data/: sample_norberts.json
