[project]
# Store the file as 'cad-capgains' on PyPI, but have the CLI command be named
# 'capgains'
name = "cad-capgains"
version = "2.0.2"
description = "A CLI tool to calculate your capital gains"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eddy Maric" },
    { name = "Emil Maric" }
]
maintainers = [
    { name = "Eddy Maric" },
    { name = "Emil Maric" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
    "capital",
    "gains",
    "canadian",
    "tax"
]
dependencies = [
    "click>=7.1.2,<8.0.0",
    "tabulate>=0.8.7,<0.9.0",
    "requests>=2.23.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/EmilMaric/cad-capital-gains"
Repository = "https://github.com/EmilMaric/cad-capital-gains"

[project.scripts]
capgains = "capgains.cli:capgains"
schwab-to-acb = "capgains.schwab_statement_importer:main"

[tool.uv]
# So `uv sync` / `uv run` include PyMuPDF without `uv run --group pdf ...`
default-groups = ["dev", "pdf"]

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "requests-mock>=1.8.0,<2.0.0",
    "flake8>=6.1.0,<7.0.0",
    "tox>=4.26.0,<5.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "flake8-pyproject>=1.2.3,<2.0.0",
]
pdf = [
    "pymupdf>=1.27.2.3",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["capgains"]

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
    ".tox",
    ".pytest_cache"
]
