[project]
# Store the file as 'cad-capgains' on PyPI, but have the CLI command be named
# 'capgains'
name = "cad-capgains"
version = "2.2.0"
description = "A CLI tool to calculate your capital gains"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eddy Maric" },
    { name = "Emil Maric" },
]
maintainers = [
    { name = "Eddy Maric" },
    { name = "Emil Maric" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
    "capital",
    "gains",
    "canadian",
    "tax",
]
dependencies = [
    "click>=8.1.7,<9.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "requests>=2.23.0,<3.0.0",
    "pdfplumber>=0.10.3,<0.12.0",
]

[project.urls]
Homepage = "https://github.com/EmilMaric/cad-capital-gains"
Repository = "https://github.com/EmilMaric/cad-capital-gains"

[project.scripts]
capgains = "capgains.cli:capgains"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "requests-mock>=1.8.0,<2.0.0",
    "flake8>=6.1.0,<7.0.0",
    "tox>=4.26.0,<5.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "flake8-pyproject>=1.2.3,<2.0.0",
    "yapf>=0.43.0,<0.50.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["capgains"]

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
    ".tox",
    ".pytest_cache",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 79
split_before_logical_operator = true
split_before_first_argument = true
dedent_closing_brackets = true
split_complex_comprehension = true
split_all_top_level_comma_separated_values = true
split_before_dot = true
split_before_expression_after_opening_paren = true
align_closing_bracket_with_visual_indent = true
split_arguments_when_comma_terminated = true
join_multiple_lines = false
allow_split_before_dict_value = false
coalesce_brackets = false
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
each_dict_entry_on_separate_line = true
i18n_function_call = ["fmt.format"]

[tool.yapfignore]
ignore_patterns = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
    ".tox",
    ".pytest_cache",
]
